Fix button in product card on tablet

--- a/src/blocks/components/product-card/_product-card.scss
+++ b/src/blocks/components/product-card/_product-card.scss
@@ -343,6 +343,9 @@
     padding: 12px 15px;
     min-width: 115px;
     text-align: center;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 
     .blocks & {
       width: 50%;
